<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shaikhbro.classsavingtest.fragment.ObjectStoreFragment">

    <TextView
        style="@style/TextStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/object_save_text" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integer_text" />

        <EditText
            android:id="@+id/interger_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/integer_save_btn"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_txt" />

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/result_text" />

        <TextView
            android:id="@+id/integer_value_result"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/float_text" />

        <EditText
            android:id="@+id/float_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/float_save_btn"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_txt" />

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/result_text" />

        <TextView
            android:id="@+id/float_value_result"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="3.456" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_text" />

        <EditText
            android:id="@+id/string_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/string_save_btn"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_txt" />

        <TextView
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/result_text" />

        <TextView
            android:id="@+id/string_value_result"
            style="@style/TextStyleMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/Welcome_text" />
    </LinearLayout>

</LinearLayout>